test/integration/bad/function-signatures/duplicate-args.stan
functions {
  void foo(int bar, real bar){
    ;
  }
}
